docs/microk8s/examples/httpbin-ingress-secure.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
  name: httpbin-ingress
spec:
  rules:
    - host: eeyore.local
      http:
        paths:
          - backend:
              serviceName: httpbin
              servicePort: 8000
            path: /
  tls:
    - hosts:
        - eeyore.local
      secretName: ingress-certificate
