docs/microk8s/examples/httpbin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpbin-ingress
spec:
  rules:
    - host: eeyore.local
      http:
        paths:
          - backend:
              serviceName: httpbin
              servicePort: 8000
            path: /
